--- a/index.html
+++ b/index.html
@@ -2,49 +2,49 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link
+		<!-- <link
 			href="https://fonts.googleapis.com/css?family=Quicksand:300"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Merriweather:400"
+			rel="stylesheet"
+		/> -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Figtree:400"
 			rel="stylesheet"
 		/>
 		<link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 		<link rel="stylesheet" href="index.css" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<title>Adam Polický</title>
-		<style type="text/css">
-			:root {
-				--mint-clr: #16bac5;
-				--blu-clr: #5fbff9;
-				--magnolia-clr: #efe9f4;
-				--dark-grey-clr: #171d1c;
-				--dark-blu-clr: #5863f8;
-			}
-
-			html,
-			body {
-				font-family: "Quicksand", sans-serif;
-				padding: 0;
-				margin: 0;
-				background-color: var(--magnolia-clr);
-			}
-
-			.center {
-				text-align: center;
-				width: 100%;
-				margin-top: 20%;
-				margin-top: calc(25% - 100px);
-			}
-
-			.large {
-				font-size: 10vh;
-			}
-
-			.blk {
-				color: var(--dark-grey-clr);
-			}
-		</style>
 	</head>
 
 	<body>
-		<div class="large center blk">Adam Polický</div>
+		<div class="my-name">Adam Polický</div>
+		<div class="wrapper">
+			<div class="divider"></div>
+			<div class="about-me">
+				<!-- <p>another p</p> -->
+				<p>
+					I am a computer science student working part-time as a
+					software engineer with an interest in cycling, architecture
+					and a strong passion for coffee. My main objective at
+					school, at work, and in my private life is to understand the
+					things that surround me.
+				</p>
+			</div>
+			<div class="contacts">
+				<div class="mail">
+					<a href="mailto:ahoj@apolicky.cz">ahoj@apolicky.cz</a>
+				</div>
+				<div class="linkedin">
+					<a href="https://www.linkedin.com/in/adam-polick%C3%BD"
+						>LinkedIn</a
+					>
+				</div>
+			</div>
+		</div>
+		<div class="cr">by adamski</div>
 	</body>
 </html>
