--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<body>
 		<div class="my-name">Adam Polický</div>
 		<div class="wrapper">
-			<div class="divider"></div>
+			<div class="divider-upper"></div>
+			<div class="divider-lower"></div>
 			<div class="about-me">
 				<!-- <p>another p</p> -->
 				<p>
