--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 			</div>
 			<div class="contacts">
 				<div class="mail">
-					<a href="mailto:ahoj@apolicky.cz">ahoj@apolicky.cz</a>
+					<a
+						href="mailto:heyy@apolicky.cz?subject=Stunned by your website, Adam!&body=The mail address doesn't work, sorry!"
+						>heyy@apolicky.cz</a
+					>
 				</div>
 				<div class="linkedin">
 					<a href="https://www.linkedin.com/in/adam-polick%C3%BD"
@@ -46,6 +49,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="cr">by adamski</div>
+		<div class="cr">A. 🐙</div>
 	</body>
 </html>
