--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Adam Polický - Software Developer</title>
-        <link href="output.css" rel="stylesheet" />
+        <link href="src/output.css" rel="stylesheet" />
         <style>
             ::selection {
                 background-blend-mode: darken;
