--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Adam Polický - Software Developer</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <link href="src/output.css" rel="stylesheet" />
         <style>
             ::selection {
