--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         >
             <div>Contact:</div>
             <a
-                href="mailto:heyy@apolicky.cz"
+                href="mailto:heyy@apolicky.xyz"
                 class="border-black border-2 py-2 px-4 hover:bg-[#00e8fc] hover:text-black button-shadow"
-                >heyy@apolicky.cz</a
+                >heyy@apolicky.xyz</a
             ><a
                 href="https://www.linkedin.com/in/adam-polický"
                 target="_blank"
