--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <style>
             ::selection {
                 background-blend-mode: darken;
-                background-color: #00e8fc;
-                color: black; /* Custom text color for selected text */
+                background-color: black;
+                color: white; /* Custom text color for selected text */
             }
 
             .button-shadow {
@@ -24,7 +24,7 @@
                 left: 5px;
                 right: -5px;
                 bottom: -5px;
-                background: #00e8fc;
+                background: black;
                 border: solid 1px black;
                 z-index: -1;
             }
@@ -36,7 +36,7 @@
         </header>
         <header class="mx-4 mb-4 content-center border-black border-x-2 border-b-2 gap-x-2 px-4 py-1">
             <p class="md:text-lg bg-gray-50 flex flex-col md:flex-row">
-                <span>Software Developer</span><span class="font-bold mx-2 hidden md:block md:text-[#00e8fc]">|</span>
+                <span>Software Developer</span><span class="font-bold mx-2 hidden md:block md:text-black">|</span>
                 <span>Masters Student in Computer Science</span>
             </p>
         </header>
@@ -56,18 +56,18 @@
             <div>Contact:</div>
             <a
                 href="mailto:heyy@apolicky.xyz"
-                class="border-black border-2 py-2 px-4 hover:bg-[#00e8fc] hover:text-black button-shadow"
+                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
                 >heyy@apolicky.xyz</a
             ><a
                 href="https://www.linkedin.com/in/adam-polický"
                 target="_blank"
-                class="border-black border-2 py-2 px-4 hover:bg-[#00e8fc] hover:text-black button-shadow"
+                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
                 >LinkedIn</a
             >
             <a
                 href="https://github.com/apolicky"
                 target="_blank"
-                class="border-black border-2 py-2 px-4 hover:bg-[#00e8fc] hover:text-black button-shadow"
+                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
                 >GitHub</a
             >
         </footer>
