--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             ::selection {
                 background-blend-mode: darken;
                 background-color: black;
-                color: white; /* Custom text color for selected text */
+                color: white;
             }
 
             .button-shadow {
@@ -31,16 +31,17 @@
         </style>
     </head>
     <body class="min-h-screen flex flex-col bg-gray-50 font-mono w-full">
-        <header class="mx-4 mt-4 content-center border-black border-2 gap-x-2 px-4 py-2">
+        <header class="mx-2 mt-2 content-center border-black border-2 gap-x-2 px-2 py-2">
             <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold bg-gray-50">Adam Polický</h1>
         </header>
-        <header class="mx-4 mb-4 content-center border-black border-x-2 border-b-2 gap-x-2 px-4 py-1">
-            <p class="md:text-lg bg-gray-50 flex flex-col md:flex-row">
-                <span>Software Developer</span><span class="font-bold mx-2 hidden md:block md:text-black">|</span>
-                <span>Masters Student in Computer Science</span>
-            </p>
+        <header class="mx-2 mb-4 content-center border-black border-x-2 border-b-2 gap-x-2 px-2 py-1">
+            <div class="md:text-lg bg-gray-50 flex flex-col md:flex-row">
+                <div>Software Developer</div>
+                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-black"></div>
+                <div>Masters Student in Computer Science</div>
+            </div>
         </header>
-        <main class="md:max-w-[60%] px-8 flex flex-col flex-grow">
+        <main class="md:max-w-[60%] px-4 flex flex-col flex-grow">
             <section id="about" class="mb-8">
                 <p>
                     Hey there! I'm Adam Polický, a software developer specializing in Kubernetes, .NET, TypeScript, and
@@ -51,25 +52,26 @@
             </section>
         </main>
         <footer
-            class="flex flex-col sm:flex-row m-4 border-black border-2 items-center px-4 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 sm:*:mb-3 *:bg-gray-50"
+            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-black border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 *:bg-gray-50"
         >
-            <div>Contact:</div>
+            <div class="self-center">Contact:</div>
             <a
                 href="mailto:heyy@apolicky.xyz"
-                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
+                class="border-black border-2 py-1 px-4 hover:bg-black hover:text-white button-shadow"
                 >heyy@apolicky.xyz</a
             ><a
                 href="https://www.linkedin.com/in/adam-polický"
                 target="_blank"
-                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
+                class="border-black border-2 py-1 px-4 hover:bg-black hover:text-white button-shadow"
                 >LinkedIn</a
             >
             <a
                 href="https://github.com/apolicky"
                 target="_blank"
-                class="border-black border-2 py-2 px-4 hover:bg-black hover:text-white button-shadow"
+                class="border-black border-2 py-1 px-4 hover:bg-black hover:text-white button-shadow"
                 >GitHub</a
             >
+            <div class="sm:justify-self-end sm:mr-2 hidden">IČO: TODOTODO</div>
         </footer>
     </body>
 </html>
