--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="border-stone-950 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-950 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-950 button-shadow adaptive"
                 >GitHub</a
             >
-            <div class="sm:justify-self-end sm:mr-2 dark:text-stone-50 hidden">IČO: TODOTODO</div>
+            <div class="self-center sm:justify-self-end sm:mr-2 text-xs text-stone-300 dark:text-stone-700">IČO: 22310665</div>
         </footer>
     </body>
 </html>
