--- a/index.html
+++ b/index.html
@@ -49,47 +49,56 @@
             }
         </style>
     </head>
-    <body class="min-h-screen flex flex-col bg-stone-50 dark:bg-stone-950 dark:text-stone-50 font-mono w-full">
-        <header class="mx-2 mt-2 content-center border-stone-950 dark:border-stone-50 border-2 gap-x-2 px-2 py-2">
+    <body class="min-h-screen flex flex-col bg-stone-50 dark:bg-stone-900 dark:text-stone-50 font-mono w-full font-extralight">
+        <header class="mx-2 mt-2 content-center border-stone-900 dark:border-stone-50 border-2 gap-x-2 px-2 py-2">
             <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold">Adam Polický</h1>
         </header>
-        <header
-            class="mx-2 mb-4 content-center border-stone-950 dark:border-stone-50 border-x-2 border-b-2 gap-x-2 px-2 py-1"
-        >
+        <header class="mx-2 mb-4 content-center border-stone-900 dark:border-stone-50 border-x-2 border-b-2 gap-x-2 px-2 py-1">
             <div class="md:text-lg flex flex-col md:flex-row">
                 <div>Software Developer</div>
-                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-stone-950 dark:bg-stone-50"></div>
+                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-stone-900 dark:bg-stone-50"></div>
                 <div>Masters Student in Computer Science</div>
             </div>
         </header>
         <main class="md:max-w-[60%] px-4 flex flex-col flex-grow">
             <section id="about" class="mb-8">
+                <h2 class="underline">Hey there!</h2>
                 <p>
-                    Hey there! I'm Adam Polický, a software developer specializing in Kubernetes, .NET, TypeScript, and
-                    monitoring technologies. Currently, I'm completing my master's degree at Charles University. Beyond
-                    coding, I'm passionate about cycling, architecture, and a good cup of coffee. Whether at school,
-                    work, or in my personal life, my main objective is to deeply understand the world around me.
+                    I'm Adam Polický, a software developer specializing in Kubernetes, .NET, TypeScript, and monitoring technologies. Currently, I'm completing
+                    my master's degree at Charles University. Beyond coding, I'm passionate about cycling, architecture, and a good cup of coffee. Whether at
+                    school, work, or in my personal life, my main objective is to deeply understand the world around me.
+                </p>
+            </section>
+            <section id="projects" class="mb-8">
+                <h2 class="underline">Projects</h2>
+                <p>
+                    I have a special spot in my heart for dumb shit. I just tried to vibe code a website, you can have a taste here
+                    <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline">abcd.xyz</a>. Wasn't too much fun though.
+                </p>
+                <p>
+                    Once a week, I teach spinning classes. You can rip off a leaf(-let) from the tree
+                    <a target="_blank" href="https://linktr.ee/apolicky" class="underline">linktr.ee/apolicky</a>.
                 </p>
             </section>
         </main>
         <footer
-            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-stone-950 dark:border-stone-50 border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-stone-50 dark:[&>a]:bg-stone-950"
+            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-stone-900 dark:border-stone-50 border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-stone-50 dark:[&>a]:bg-stone-900"
         >
             <div class="self-center">Contact:</div>
             <a
                 href="mailto:heyy@apolicky.xyz"
-                class="border-stone-950 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-950 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-950 button-shadow adaptive"
+                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
                 >heyy@apolicky.xyz</a
             ><a
                 href="https://www.linkedin.com/in/adam-polický"
                 target="_blank"
-                class="border-stone-950 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-950 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-950 button-shadow adaptive"
+                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
                 >LinkedIn</a
             >
             <a
                 href="https://github.com/apolicky"
                 target="_blank"
-                class="border-stone-950 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-950 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-950 button-shadow adaptive"
+                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
                 >GitHub</a
             >
             <div class="self-center sm:justify-self-end sm:mr-2 text-xs text-stone-300 dark:text-stone-700">IČO: 22310665</div>
