--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <link href="src/output.css" rel="stylesheet" />
         <style>
+            :root {
+                --dark: #020a04;
+                --light: #fbfef9;
+                --accent: #f49097;
+            }
+
             ::selection {
                 background-blend-mode: darken;
-                background-color: #0c0a09;
-                color: #fafaf9;
+                background-color: var(--accent);
+                color: var(--dark);
             }
 
             .button-shadow {
@@ -24,15 +30,15 @@
                 left: 5px;
                 right: -5px;
                 bottom: -5px;
-                background: #0c0a09;
-                border: solid 1px #0c0a09;
+                background: var(--dark);
+                border: solid 1px var(--dark);
                 z-index: -1;
             }
 
             @media (prefers-color-scheme: dark) {
                 ::selection {
-                    background-color: #fafaf9;
-                    color: #0c0a09;
+                    background-color: var(--accent);
+                    color: var(--dark);
                 }
 
                 .button-shadow.adaptive::after {
@@ -42,21 +48,21 @@
                     left: 5px;
                     right: -5px;
                     bottom: -5px;
-                    background: #fafaf9;
-                    border: solid 1px #fafaf9;
+                    background: var(--light);
+                    border: solid 1px var(--light);
                     z-index: -1;
                 }
             }
         </style>
     </head>
-    <body class="min-h-screen flex flex-col bg-stone-50 dark:bg-stone-900 dark:text-stone-50 font-mono w-full font-extralight">
-        <header class="mx-2 mt-2 content-center border-stone-900 dark:border-stone-50 border-2 gap-x-2 px-2 py-2">
+    <body class="min-h-screen flex flex-col bg-[#fbfef9] dark:bg-[#020a04] dark:text-[#fbfef9] font-mono w-full font-extralight">
+        <header class="mx-2 mt-2 content-center border-[#020a04] dark:border-[#fbfef9] border-2 gap-x-2 px-2 py-2">
             <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold">Adam Polický</h1>
         </header>
-        <header class="mx-2 mb-4 content-center border-stone-900 dark:border-stone-50 border-x-2 border-b-2 gap-x-2 px-2 py-1">
+        <header class="mx-2 mb-4 content-center border-[#020a04] dark:border-[#fbfef9] border-x-2 border-b-2 gap-x-2 px-2 py-1">
             <div class="md:text-lg flex flex-col md:flex-row">
                 <div>Software Developer</div>
-                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-stone-900 dark:bg-stone-50"></div>
+                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
                 <div>Masters Student in Computer Science</div>
             </div>
         </header>
@@ -73,32 +79,33 @@
                 <h2 class="underline">Projects</h2>
                 <p>
                     I have a special spot in my heart for dumb shit. I just tried to vibe code a website, you can have a taste here
-                    <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline">abcd.xyz</a>. Wasn't too much fun though.
+                    <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-[#f49097]">abcd.xyz</a>. Wasn't too much fun
+                    though.
                 </p>
                 <p>
                     Once a week, I teach spinning classes. You can rip off a leaf(-let) from the tree
-                    <a target="_blank" href="https://linktr.ee/apolicky" class="underline">linktr.ee/apolicky</a>.
+                    <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-[#f49097]">linktr.ee/apolicky</a>.
                 </p>
             </section>
         </main>
         <footer
-            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-stone-900 dark:border-stone-50 border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-stone-50 dark:[&>a]:bg-stone-900"
+            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-[#020a04] dark:border-[#fbfef9] border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-[#fbfef9] dark:[&>a]:bg-[#020a04]"
         >
             <div class="self-center">Contact:</div>
             <a
                 href="mailto:heyy@apolicky.xyz"
-                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
+                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
                 >heyy@apolicky.xyz</a
             ><a
                 href="https://www.linkedin.com/in/adam-polický"
                 target="_blank"
-                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
+                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
                 >LinkedIn</a
             >
             <a
                 href="https://github.com/apolicky"
                 target="_blank"
-                class="border-stone-900 dark:border-stone-50 border-2 py-1 px-4 hover:bg-stone-900 dark:hover:bg-stone-50 hover:text-stone-50 dark:hover:text-stone-900 button-shadow adaptive"
+                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
                 >GitHub</a
             >
             <div class="self-center sm:justify-self-end sm:mr-2 text-xs text-stone-300 dark:text-stone-700">IČO: 22310665</div>
