--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Adam Polický - Software Developer</title>
+        <title>adam polický - software developer</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <link href="src/output.css" rel="stylesheet" />
         <style>
@@ -15,100 +15,59 @@
 
             ::selection {
                 background-blend-mode: darken;
-                background-color: var(--accent);
-                color: var(--dark);
-            }
-
-            .button-shadow {
-                position: relative;
-            }
-
-            .button-shadow::after {
-                content: "";
-                position: absolute;
-                top: 5px;
-                left: 5px;
-                right: -5px;
-                bottom: -5px;
-                background: var(--dark);
-                border: solid 1px var(--dark);
-                z-index: -1;
+                background-color: var(--dark);
+                color: var(--light);
             }
 
             @media (prefers-color-scheme: dark) {
                 ::selection {
-                    background-color: var(--accent);
+                    background-color: var(--light);
                     color: var(--dark);
-                }
-
-                .button-shadow.adaptive::after {
-                    content: "";
-                    position: absolute;
-                    top: 5px;
-                    left: 5px;
-                    right: -5px;
-                    bottom: -5px;
-                    background: var(--light);
-                    border: solid 1px var(--light);
-                    z-index: -1;
                 }
             }
         </style>
     </head>
     <body class="min-h-screen flex flex-col bg-[#fbfef9] dark:bg-[#020a04] dark:text-[#fbfef9] font-mono w-full font-extralight">
-        <header class="mx-2 mt-2 content-center border-[#020a04] dark:border-[#fbfef9] border-2 gap-x-2 px-2 py-2">
-            <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold">Adam Polický</h1>
-        </header>
-        <header class="mx-2 mb-4 content-center border-[#020a04] dark:border-[#fbfef9] border-x-2 border-b-2 gap-x-2 px-2 py-1">
+        <header class="mx-2 mt-2 content-center border-[#020a04] dark:border-[#fbfef9] border-[1px] gap-x-2 px-2 py-2">
             <div class="md:text-lg flex flex-col md:flex-row">
-                <div>Software Developer</div>
+                <h1>adam polický</h1>
                 <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
-                <div>Masters Student in Computer Science</div>
+                <h2>software developer</h2>
+                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
+                <h2>masters student in computer science</h2>
             </div>
         </header>
-        <main class="md:max-w-[60%] px-4 flex flex-col flex-grow">
-            <section id="about" class="mb-8">
-                <h2 class="underline">Hey there!</h2>
-                <p>
-                    I'm Adam Polický, a software developer specializing in Kubernetes, .NET, TypeScript, and monitoring technologies. Currently, I'm completing
-                    my master's degree at Charles University. Beyond coding, I'm passionate about cycling, architecture, and a good cup of coffee. Whether at
-                    school, work, or in my personal life, my main objective is to deeply understand the world around me.
-                </p>
-            </section>
-            <section id="projects" class="mb-8">
-                <h2 class="underline">Projects</h2>
-                <p>
-                    I have a special spot in my heart for dumb shit. I just tried to vibe code a website, you can have a taste here
-                    <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-[#f49097]">abcd.xyz</a>. Wasn't too much fun
-                    though.
-                </p>
-                <p>
-                    Once a week, I teach spinning classes. You can rip off a leaf(-let) from the tree
-                    <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-[#f49097]">linktr.ee/apolicky</a>.
-                </p>
+        <main class="mt-4 md:max-w-[60%] px-4 flex flex-col flex-grow">
+            <section id="about" class="mb-8 ml-4 w-full">
+                <ul class="list-disc list-outside w-full">
+                    <li>specializing in kubernetes, .net, typescript, and monitoring technologies</li>
+                    <li>completing master's degree at charles university</li>
+                    <ul class="pl-4 list-disc list-outside">
+                        <li>thesis topic: business rules extraction from large datasets</li>
+                        <li>
+                            research project received best demo award
+                            <a target="_blank" href="https://iswc.umbc.edu/program/awards/" class="underline hover:text-gray-500">iswc 2024</a>
+                        </li>
+                    </ul>
+                    <li>
+                        just tried to vibe code a website
+                        <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-gray-500">abcd.xyz</a>
+                    </li>
+                    <li>
+                        i lecture spinning classes
+                        <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
+                    </li>
+                </ul>
             </section>
         </main>
         <footer
-            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-[#020a04] dark:border-[#fbfef9] border-2 px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-[#fbfef9] dark:[&>a]:bg-[#020a04]"
+            class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-[#020a04] dark:border-[#fbfef9] border-[1px] px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-[#fbfef9] dark:[&>a]:bg-[#020a04]"
         >
             <div class="self-center">Contact:</div>
-            <a
-                href="mailto:heyy@apolicky.xyz"
-                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
-                >heyy@apolicky.xyz</a
-            ><a
-                href="https://www.linkedin.com/in/adam-polický"
-                target="_blank"
-                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
-                >LinkedIn</a
-            >
-            <a
-                href="https://github.com/apolicky"
-                target="_blank"
-                class="border-[#020a04] dark:border-[#fbfef9] border-2 py-1 px-4 hover:bg-[#020a04] dark:hover:bg-[#fbfef9] hover:text-[#fbfef9] dark:hover:text-[#020a04] button-shadow adaptive"
-                >GitHub</a
-            >
-            <div class="self-center sm:justify-self-end sm:mr-2 text-xs text-stone-300 dark:text-stone-700">IČO: 22310665</div>
+            <a href="mailto:heyy@apolicky.xyz" class="underline hover:text-gray-500">heyy@apolicky.xyz</a
+            ><a href="https://www.linkedin.com/in/adam-polický" target="_blank" class="underline hover:text-gray-500">linkedin</a>
+            <a href="https://github.com/apolicky" target="_blank" class="underline hover:text-gray-500">github</a>
+            <div class="self-center sm:justify-self-end sm:mr-2 text-xs text-stone-300 dark:text-stone-700">ičo: 22310665</div>
         </footer>
     </body>
 </html>
