--- a/index.html
+++ b/index.html
@@ -40,12 +40,22 @@
         <main class="mt-4 md:max-w-[60%] px-4 flex flex-col flex-grow">
             <section id="about" class="mb-8 ml-4 w-full">
                 <ul class="list-disc list-outside w-full">
-                    <li>specializing in kubernetes, .net, typescript, and monitoring technologies</li>
+                    <li>fullstack software developer</li>
+                    <ul class="pl-4 list-disc list-outside">
+                        <li>devops stuff: kubernetes, argo, helm, (+observability)</li>
+                        <li>typescript, java or .net, doesn't matter</li>
+                    </ul>
                     <li>completing master's degree at charles university</li>
                     <ul class="pl-4 list-disc list-outside">
                         <li>thesis topic: business rules extraction from large datasets</li>
                         <li>
-                            research project received best demo award
+                            <a
+                                target="_blank"
+                                href="https://github.com/dataspecer/dataspecer/tree/main/applications/conceptual-model-editor"
+                                class="underline hover:text-gray-500"
+                                >research project</a
+                            >
+                            received best demo award
                             <a target="_blank" href="https://iswc.umbc.edu/program/awards/" class="underline hover:text-gray-500">iswc 2024</a>
                         </li>
                     </ul>
@@ -54,7 +64,7 @@
                         <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-gray-500">abcd.xyz</a>
                     </li>
                     <li>
-                        i lecture spinning classes
+                        i lecture <a target="_blank" href="./spinning-playlist-covers">spinning</a> classes
                         <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
                     </li>
                 </ul>
