--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
                         <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-gray-500">abcd.xyz</a>
                     </li>
                     <li>
-                        i lecture <a target="_blank" href="./spinning-playlist-covers">spinning</a> classes
-                        <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
+                        i lecture <a target="_blank" href="./spinning-playlist-covers">spinning</a> classes. playlists on
+                        <a target="_blank" href="https://open.spotify.com/user/adampolicky" class="underline hover:text-gray-500"
+                            >spotify.com/users/adampolicky</a
+                        >
+                        and more info on <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
                     </li>
                 </ul>
             </section>
@@ -73,7 +76,7 @@
         <footer
             class="grid grid-cols-1 grid-rows-[auto_auto_auto_auto_1fr] sm:grid-cols-[auto_auto_auto_auto_1fr] sm:grid-rows-1 m-2 border-[#020a04] dark:border-[#fbfef9] border-[1px] px-2 sm:*:mr-4 *:mt-1 md:*:mt-2 *:mb-2 l [&>a]:bg-[#fbfef9] dark:[&>a]:bg-[#020a04]"
         >
-            <div class="self-center">Contact:</div>
+            <div class="self-center">contact:</div>
             <a href="mailto:heyy@apolicky.xyz" class="underline hover:text-gray-500">heyy@apolicky.xyz</a
             ><a href="https://www.linkedin.com/in/adam-polický" target="_blank" class="underline hover:text-gray-500">linkedin</a>
             <a href="https://github.com/apolicky" target="_blank" class="underline hover:text-gray-500">github</a>
