update spinning links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -31,9 +31,9 @@
         <header class="mx-2 mt-2 content-center border-[#020a04] dark:border-[#fbfef9] border-[1px] gap-x-2 px-2 py-2">
             <div class="md:text-lg flex flex-col md:flex-row">
                 <h1>adam polický</h1>
-                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
+                <div class="h-[1px] my-1.5 md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
                 <h2>software developer</h2>
-                <div class="h-[1px] md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
+                <div class="h-[1px] my-1.5 md:w-[2px] md:mx-2 md:my-auto md:h-4 bg-[#020a04] dark:bg-[#fbfef9]"></div>
                 <h2>masters student in computer science</h2>
             </div>
         </header>
@@ -64,12 +64,25 @@
                         <a target="_blank" href="https://abcdfghijklmnopqrstuvw.xyz" class="underline hover:text-gray-500">abcd.xyz</a>
                     </li>
                     <li>
-                        i lecture <a target="_blank" href="./spinning-playlist-covers">spinning</a> classes. playlists on
-                        <a target="_blank" href="https://open.spotify.com/user/adampolicky" class="underline hover:text-gray-500"
-                            >spotify.com/users/adampolicky</a
-                        >
-                        and more info on <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
+                        i lecture <a target="_blank" href="./spinning-playlist-covers">spinning</a> classes in
+                        <a target="_blank" href="https://xplorefitness.cz" class="underline hover:text-gray-500"> xplore fitness, prague</a>.
                     </li>
+                    <ul class="pl-4 list-disc list-outside">
+                        <li>
+                            playlists on
+                            <a target="_blank" href="https://open.spotify.com/user/adampolicky" class="underline hover:text-gray-500">
+                                spotify.com/users/adampolicky
+                            </a>
+                        </li>
+                        <li>
+                            news (lecture substitutes, etc)
+                            <a target="_blank" href="https://instagram.com/adam.spinning" class="underline hover:text-gray-500"> @adam.spinning </a>
+                        </li>
+                        <li>
+                            or both links and more on one place
+                            <a target="_blank" href="https://linktr.ee/apolicky" class="underline hover:text-gray-500">linktr.ee/apolicky</a>
+                        </li>
+                    </ul>
                 </ul>
             </section>
         </main>
